# monoid-builder

./: LICENSE  azure-pipelines.yml  monoid-builder.cabal
src/Data/Monoid/: Builder.hs
src/Data/Semigroup/: Builder.hs
