cabal-version: 3.0
name: monoid-builder
version: 0.1
build-type: Simple

library
  exposed-modules:
    Data.Semigroup.Builder
    Data.Monoid.Builder
  build-depends:
    base >= 4.11
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    RankNTypes
  ghc-options:
    -Wall
    -O2
